# autodonate

./: .dockerignore  .editorconfig  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DONATE.md  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  config.yml.example  manage.py  mypy.ini  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: screenshot.py  upload.py
.github/workflows/: codeql.yml  deploy-pypi.yml  docker-stable.yml  docker-staging.yml  screenshot.yml  test.yml
adminapp/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
api/: apps.py  structures.py  urls.py  views.py
autodonate/: __init__.py  admin.py  app.py  application.py  asgi.py  config.py  database.py  db_models.py  main.py  models.py  plugin_manager.py  plugin_models.py  settings.py  tables.py  urls.py  views.py  wsgi.py
autodonate/lib/: __init__.py  admin.py  models.py
autodonate/lib/context_processors/: __init__.py
autodonate/lib/migrations/: 0001_initial.py
autodonate/lib/payment/: __init__.py  api.py  currencies.py  models.py  urls.py
autodonate/lib/templatetags/: __init__.py  common.py  statictags.py  svelte.py
autodonate/lib/utils/: cron.py  logger.py  rcon.py
autodonate/logger/: __init__.py  logger.py
autodonate/management/commands/: __init__.py  initconfig.py
autodonate/migrations/: 0001_initial.py  0002_add_project_name_field.py  0002_alter_payment_process.py  0003_alter_payment_process.py  __init__.py
autodonate/module/: __init__.py
autodonate/url/: __init__.py  decorators.py  dummy_decorators.py
autodonate/utils/: config.py  logger.py
bulma/: package-lock.json  package.json  webpack.config.js
docs/: Makefile  conf.py  index.rst  remove_trash.py  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
docs/modules/: modules.rst
docs/pages/: database.md
donate/: asgi.py  settings.py  urls.py  wsgi.py
index/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
index/migrations/: __init__.py
static/: bootstrap.min.css
svelte/: package-lock.json  package.json  rollup.config.js  rollup.config.ts  tsconfig.json
svelte/src/: types.ts
svelte/src/api/: auth.ts  getters.js  getters.ts  media.js  media.ts  static.js  static.ts
svelte/src/declarations/: admin.ts  adminpages.ts  donate.js  features.js  features.ts  hero.ts  index.js  index.ts  lastdonates.ts  navbar.ts
svelte/src/pages/: Admin.svelte  AdminPages.svelte  Index.svelte
svelte/src/ui/: Donate.svelte  Features.svelte  Hero.svelte  LastDonateCard.svelte  LastDonates.svelte  Modal.svelte  Navbar.svelte  NavbarAdmin.svelte  Toast.svelte  WidgetCard.svelte
templates/: base.html  display_svelte.html  index.html  toasts.html
templates/admin/: index.html  pages.html
tests/: test_static.py  test_true.py
tests/api/: __init__.py  conftest.py  test_config.py  test_donation.py  test_player.py  test_product.py
tests/config/: test_config.py
tests/context_processors/: test_processors.py
tests/cron/: test_cron.py
tests/models/: test_payments.py
tests/payment/: test_payment.py
tests/test_example/: test_some_function.py
tests/views/: test_healthcheck.py
