[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "autodonate"
description = "Бесплатный и модульный сайт авто-доната для майнкрафт серверов."
version = "0.1.1"
license = "AGPL3"

authors = [
  "PerchunPak <PerchunPak@users.noreply.github.com>",
  "cofob <cofob@riseup.net>"
]

readme = "README.md"

repository = "https://github.com/fire-squad/autodonate"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1"
Django = "^4.0.2"
requests = "^2.27.1"
PyYAML = "^6.0"
autodonate-placeholder-plugin = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
mypy = "^0.931"

safety = "^1.10"

pytest = "^7.0"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"
pytest-django = "^4.5.2"

sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.17"
sphinxcontrib-apidoc = "^0.3"
furo = "^2022.2.23"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.10"
toml = "^0.10.2"

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = 'migrations'
