[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "autodonate"
description = "Free autodonate system."
version = "0.2.0"
license = "AGPL3"

authors = [
  "PerchunPak <perchunpak@gmail.com>",
  "cofob <cofob@riseup.net>"
]

readme = "README.md"

repository = "https://github.com/fire-squad/autodonate"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1"
requests = "^2.27.1"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.31"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
Mako = "^1.1.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"

safety = "^1.10"

pytest = "^7.0"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.17"
sphinxcontrib-apidoc = "^0.3"
furo = "^2022"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.10"
toml = "^0.10.2"

[tool.black]
line-length = 120
target-version = ['py310']
