[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "autodonate"
description = "Free auto-donate site."
version = "0.3.0-alpha.dev"
license = "AGPL3"

authors = [
  "PerchunPak <perchunpak@gmail.com>",
  "cofob <cofob@riseup.net>"
]

readme = "README.md"

repository = "https://github.com/fire-square/autodonate"

[tool.poetry.dependencies]
python = "^3.8"

# Our dependecies
Django = "^4"
dj-database-url = "^0.5"
py-ubjson = "^0.16.1"

django-axes = "^5.33"
django-stubs-ext = "^0.4"

python-decouple = "^3"
structlog = "21.5.0"

### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }

# Docs
sphinx                   = { version = "^4.5",  optional = true }
sphinx-autodoc-typehints = { version = "^1.18", optional = true }
sphinx-autoapi           = { version = "^1.8",  optional = true }
furo                     = { version = "*",     optional = true }
m2r2                     = { version = "^0.3",  optional = true }
tomli                    = { version = "^2.0",  optional = true }

# Visual Studio Code fix. See CONTRIBUTING.md.
pylint-django            = { version = "^2.5",  optional = true }

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.10"
pycln = "^1.3"
doc8 = "^0.11"
pre-commit = "^2.18"
mypy = "0.942"
flake8 = "^4"
flake8-docstrings = "^1"
pydocstyle = ">=4.0.0"

safety = "^1.10"

django-debug-toolbar = "^3.4"
django-querycount = "^0.7"
nplusone = "^1.0"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-mock = "^3.7"
pytest-django = "^4.5"
pytest-testmon = "^1.3"
pytest-randomly = "^3.11"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi", "furo", "m2r2", "tomli"]
vscode-fix = ["pylint-django"]

[tool.black]
line-length = 120
extend-exclude = "autodonate/migrations"
target-version = ['py310']
